Phone screen sidebar fixing

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -305,7 +305,7 @@ body {
             
               text-align: center;
               float: none;
-              padding: 8px 16px 8px 16px;
+              padding-bottom: 5px;
             
           }
       }
